# netsplit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pr.yml  release.yml
examples/: netsplit-complex.toml  netsplit-k8s.toml  netsplit-multicloud.toml  netsplit-simple.toml
netsplit/: cli.py
tests/: test_get_subnets.py
tests/plans/: MultiCloud.json  MultiCloud.toml  Simple-nets.json  Simple-nets.toml  Simple.json  Simple.toml
