[tool.poetry]
name = "netsplit"
version = "0.2.0"
description = "Netsplit can help slice and dice your IP space"
authors = ["Nikos Chasiotis <hasiotis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
tomli = "^2.0.1"
ipaddress = "^1.0.23"
rich = "^13.7.0"

[tool.poetry.scripts]
netsplit = 'netsplit.cli:cli'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.3"

[tool.pytest.ini_options]
addopts = "-ra -q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
