[tool.poetry]
name = "netsplit"
version = "0.3.6"
description = "Netsplit can help slice and dice your IP space"
authors = ["Nikos Chasiotis <hasiotis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"
ipaddress = "^1.0.23"
rich = "^13.7.0"
click = "^8.0"

[tool.poetry.scripts]
netsplit = 'netsplit.cli:cli'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.3"
jsonpickle = "^3.0.2"
commitizen = "^3.13.0"

[tool.pytest.ini_options]
addopts = "-ra -q"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
